css/style.css
:root {
  --header-height: 80px;
  --container-lg: 70%;
}

/* ## RESET */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

img {
  display: block;
  max-width: 100%;
}

body {
  font-family: Arial, Helvetica, sans-serif;
}

/* ## UTILS */

.container {
  width: 60%;
  margin: 0 auto;
  padding: 20px;

  /* debug */
  min-height: 200px;
}

.btn {
  background-color: #0160ff;
  padding: 5px 15px;
  color: white;
  text-align: center;

  cursor: pointer;
}

.btn.btn-no-bg {
  background-color: inherit;
  color: inherit;
}

.light-text {
  color: lightgray;
}

.success {
  color: #0160ff;
}

/* ## HEADER */

.header {
  /* position: sticky;
  top: 0;
  z-index: 1; */

  height: var(--header-height);

  display: flex;
  justify-content: space-between;
  align-items: center;

  color: #818181;
  background-color: white;
}

.header_nav-left,
.header_nav-right {
  display: flex;
  align-items: center;
  padding: 0 20px;
}

.header-logo {
  flex-shrink: 0;
}

.header li {
  list-style: none;
  display: inline-block;
}

.header li a {
  text-decoration: none;
  color: inherit;
}

.header_nav-left-list li {
  margin-left: 25px;
}

.header_nav-right-list li {
  margin-right: 25px;
}

/* ## MAIN */

/* ## JUMBOTRON */

.jumbotron {
  background-color: #b3d0e7;
  padding-top: 70px;
}

.jumbotron-container.container {
  width: var(--container-lg);
}

.jumbotron-title {
  text-align: left;
  font-size: 4rem;
  font-weight: 800;
}

.jumbotron-main {
  display: flex;
}

.jumbotron-main-left {
  flex: 0 0 30%;

  display: flex;
  flex-direction: column;
  justify-content: space-between;

  padding-right: 30px;
  margin: 100px 0 20px 0;
}

.jumbotron-main-left-top {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 30px;
}

.btn.jumbo-btn {
  padding: 10px 20px;
}

.jumbotron-text {
  font-size: 1.1rem;

  color: rgb(59, 58, 58);
}

.jumbotron-image {
  position: relative;
  top: 100px;
}

/* ## RATE PLANS */

.rate-plans {
  margin-top: 150px;
}

.rate-plans-title {
  font-size: 2.5rem;
  margin-bottom: 40px;
}

.radio-button span {
  margin: 0 50px 0 2px;
}

.rate-plans-vertical {
  display: flex;
  gap: 20px;

  margin-top: 50px;
}

.plan {
  width: calc(100% / 3);
  padding-bottom: 30px;
  border: 1px solid lightgray;
  min-width: 300px;
}

.plan-icon {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 10px 0;
  border-bottom: 1px solid lightgray;
}

.plan-icon span {
  margin-left: 5px;
}

.plan-main-content {
  padding: 0 25px;
}

.plan-main-content li {
  list-style: none;
  margin: 25px 0;
}

.plan-main-content li i {
  vertical-align: top;
}

.plan-main-content li div {
  display: inline-block;
  max-width: 80%;
  margin-left: 5px;
}

.plan-main-content .btn,
.rate-plans-horizontal-content-right .btn {
  padding: 15px 0;
}

.plan-header,
.plan-buy {
  margin-top: 20px;
  padding-bottom: 30px;
  line-height: 35px;
}

.plan-header > h3 {
  font-size: 1.2rem;
}

.plan-buy {
  margin-top: 30px;
  display: block;
}

hr {
  width: 20%;
  border-style: solid;
  border-color: lightgray;
}

.plan-bottom > h4 {
  margin-top: 30px;
}

.rate-plans-horizontal {
  margin-top: 30px;
  border: 1px solid lightgray;
}

.rate-plans-horizontal-content {
  display: flex;
  gap: 50px;
  padding: 30px;
}

.rate-plans-horizontal-content-right {
  width: 30%;
}

.plan-header-horizontal {
  padding-bottom: 30px;
  line-height: 40px;
}

.plan-header-horizontal h3 {
  font-size: 1.5rem;
}

.plan-header-horizontal span {
  font-weight: bold;
}

/* ## FIND PARTNER */

.find-partner {
  display: flex;
  margin-top: 100px;
}

.find-partner-img {
  width: 60%;
  flex-shrink: 0;
}

.find-partner-content {
  align-self: center;
  padding: 0 30px;
}

.find-partner-content p {
  margin-top: 30px;
}

.find-partner-content .btn {
  width: 150px;
  background-color: inherit;
  color: grey;
  border: 1px solid grey;

  margin-top: 30px;
  padding: 15px 0;
}

/* ## CARD SECTION */

.card-section {
  margin-top: 100px;
}

.card-section-title {
  font-size: 2rem;
}

.card-container {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  gap: 30px;

  margin-top: 40px;
}

.card {
  width: calc(100% / 3 - 30px);
  min-width: 200px;
}

.card > p {
  margin-top: 30px;
}

.card-title {
  font-size: 1.5rem;
  line-height: 30px;
}

/* ## CLIENT */

.client-section {
  margin-top: 150px;
}

.client-section h2 {
  font-size: 2rem;
  padding-right: 30%;
  margin-bottom: 50px;
}

/* ## SQUARE SECTION */

.square-section {
  /* debug */
  width: 100%;
  min-height: 500px;
  margin-top: 50px;
  background-color: #b3d0e7;
}

.square-section-image {
  display: flex;
}

.square-left,
.square-middle,
.square-right {
  display: flex;

  width: calc(100% / 3);
  height: calc(100vw / 3);
  /* border: 2px solid black; */
}

.square-left,
.square-right {
  flex-wrap: wrap;
}

.square {
  display: flex;
  justify-content: center;
  align-items: center;
  height: calc(100vw / 6);
  width: calc(100% / 2);
}

.square svg * {
  fill: white;
}
.square svg {
  width: 50%;
}
.designit {
  background-color: #a2d39b;
}

.asu {
  background-color: #61092b;
}

.florida {
  background-color: #0093ce;
}

.topps {
  background-color: #ff1b1c;
}

.wbr {
  background-color: #d5001f;
}

.hearts {
  background-color: #b3d0e7;
}

.lonely {
  background-color: #0e2381;
}

.clear_channel {
  background-color: #ffd72f;
}

/* FAQ */

.faq-section {
  /* debug */
  background-color: darkgoldenrod;
  margin-top: 50px;
  margin-bottom: 50px;
}

/* ## FOOTER */

.footer {
  background-color: black;
}

.footer-container.container {
  width: var(--container-lg);
  background-color: crimson;
}

